<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

 	<Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/locations"
        android:prompt="@string/location_prompt" 
        android:spinnerMode="dialog"/>
 
    <TextView
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:text="@string/lifestyle_prompt" />

   

    <CheckBox
        android:id="@+id/checkbox_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/exercise" />

    <CheckBox
        android:id="@+id/checkbox_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/diet" />

    <CheckBox
        android:id="@+id/checkbox_smoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/smoke" />

    <CheckBox
        android:id="@+id/checkbox_overweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/overweight" />

    <CheckBox
        android:id="@+id/checkbox_fastfood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/fastfood" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="183dp"
        android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_community"
    android:layout_gravity = "bottom"
    android:onClick="loadCommunityPage" />
    
<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_prescription"
    android:layout_gravity = "bottom"
    android:onClick="loadPrescriptionPage" />
    
</LinearLayout>